--- a/Project 1/encyclopedia/templates/encyclopedia/layout.html
+++ b/Project 1/encyclopedia/templates/encyclopedia/layout.html
@@ -19,10 +19,10 @@
                     <a href="{% url 'index' %}">Home</a>
                 </div>
                 <div>
-                    Create New Page
+                    <a href="{% url 'new_page' %}">Create New Page</a>
                 </div>
                 <div>
-                    Random Page
+                    <a href="{% url 'get_random_entry' %}">Random Page</a>
                 </div>
                 {% block nav %}
                 {% endblock %}
