Added model, style and basic listing view
- Added Listing and Bid to model
- Added general style to layout.html
- Added basic listing view

--- a/Project 2/auctions/templates/auctions/index.html
+++ b/Project 2/auctions/templates/auctions/index.html
@@ -2,6 +2,14 @@
 
 {% block body %}
     <h2>Active Listings</h2>
-
-    TODO
+    <ul>
+        {% for listing in listings %}
+            <li>
+                <a href="{% url 'listing_view' listing.id %}">{{ listing }}</a>
+            </li>
+        {% empty %}
+            <li>No listings available.</li>
+        {% endfor %}
+    </ul>
+    
 {% endblock %}
