Added most requirements
Pending requirements:
- If a user is signed in on a closed listing page, and the user has won that auction, the page should say so.
- Categories: Users should be able to visit a page that displays a list of all listing categories. Clicking on the name of any category should take the user to a page that displays all of the active listings in that category.

--- a/Project 2/auctions/templates/auctions/index.html
+++ b/Project 2/auctions/templates/auctions/index.html
@@ -1,15 +1,15 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
-    <h2>Active Listings</h2>
-    <ul>
-        {% for listing in listings %}
-            <li>
-                <a href="{% url 'listing_view' listing.id %}">{{ listing }}</a>
-            </li>
-        {% empty %}
-            <li>No listings available.</li>
-        {% endfor %}
-    </ul>
-    
+  <h2>Active Listings</h2>
+
+  <div class="row row-cols-1 row-cols-md-3 g-4">
+    {% for listing in listings %}
+      {% if listing.is_active %}
+        {% include "auctions/partials/listing_card.html" %}
+      {% endif %}
+    {% empty %}
+      <p>No listings available.</p>
+    {% endfor %}
+  </div>
 {% endblock %}
