--- a/Project 2/auctions/static/auctions/styles.css
+++ b/Project 2/auctions/static/auctions/styles.css
@@ -8,3 +8,8 @@ main {
     border-radius: 0.5rem;
     box-shadow: 0 2px 8px rgba(0,0,0,0.05);
 }
+
+.card-img-top {
+    max-height: 400px;
+    object-fit: cover;
+  }
