--- a/Project 2/auctions/templates/auctions/layout.html
+++ b/Project 2/auctions/templates/auctions/layout.html
@@ -28,6 +28,15 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'create_new_listing_view' %}">Create new listing</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'my_listings' %}">My listings</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'my_watchlist' %}">Watchlist</a>
+                        </li>
                     {% else %}
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'login' %}">Log In</a>
@@ -43,6 +52,18 @@
 
     <!-- Page Content -->
     <main class="container my-4">
+        {% if messages %}
+            <div class="messages">
+            {% for message in messages %}
+                {% if message.tags == 'error' %}
+                    <div class="alert alert-danger">{{ message }}</div>
+                {% else %}
+                    <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+                {% endif %}
+            {% endfor %}
+            </div>
+        {% endif %}
+
         {% block body %}
         {% endblock %}
     </main>
