--- a/Project 2/auctions/templates/auctions/listing.html
+++ b/Project 2/auctions/templates/auctions/listing.html
@@ -33,6 +33,14 @@
                         <button type="submit" class="btn btn-success">add to Watchlist</button>
                     </form>
                 {% endif %}
+            {% elif user.is_authenticated and user_won %}
+                <p class="alert alert-success">
+                    Congratulations! You won this auction!
+                </p>
+            {% elif not listing.is_active %}
+                <p class="alert alert-secondary">
+                    This listing is closed.
+                </p>
             {% endif %}
 
             <!-- Bids -->
